--- a/cmd/config.yml
+++ b/cmd/config.yml
@@ -6,7 +6,7 @@ db:
     driver: postgres
     user: postgres
     password: postgres
-    hostdb: localhost
+    hostdb: postgres
     portdb: 5432
     dbname: postgres
     mode: disable
